users_pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      - name: userapi
        image: asia.gcr.io/project-knit/knit_users_api
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8030
