users_django_frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    name: users-api
  ports:
  - port: 80
    targetPort: 8030
  type: LoadBalancer
