knit_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: knit-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: knit-app-ip
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: userapi
          servicePort: 8030
      - path: /nginx
        backend:
          serviceName: nginx
          servicePort: 80
